# commit-open-ai

./: Cargo.toml  LICENSE  PKGBUILD  README.md
crates/openai-api-rust-main/: Cargo.toml
src/: main.rs
