[package]
license = "MIT"
edition = "2021"
version = "0.1.4"
name = "ac"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/rookasrudzianskas/commit-open-ai"
repository = "https://github.com/rookasrudzianskas/commit-open-ai"
description = "Give yourself some magic, generate commit messages with this tool."
authors = ["Rokas Rudzianskas <rokas.rudzenskas@gmail.com>"]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
env_logger = "0.9.1"
clap-verbosity-flag = "2.0.0"
tokio = { version = "0.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
openai-api = { path = "crates/openai-api-rust-main", version = "0.1.5-alpha.0" }
spinners = "4.1.0"
rand = "0.8.5"
question = "0.2.2"
